# color-counter

./: .gitignore  ReadMe.md  cabal.config  color-counter.cabal
R/: example.R  experiments.R
data/: configuration.yaml
data/R/: example.R
patch/: bindings-linux-videodev2.tar.bz2
src/: Main.hs
src/Vision/Image/: IO.hs
src/Vision/Image/Color/: Detection.hs
src/Vision/Image/IO/: Capture.hs
